--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <ul class="social-icons">
           <li><a class="github" aria-label="GitHub" href="https://github.com/koussay267" target="_blank"><i class="fab fa-github"></i></a></li>
           <li><a class="twitter" aria-label="E_mail" href="mailto:abkoussay40@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a></li>
-          <li><a class="telegram" aria-label="Telegram" href="https://web.telegram.org/k/" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
+          <li><a class="telegram" aria-label="Telegram" href="https://t.me/koussay40" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
           <li><a class="LinkedIn" aria-label="LinkedIn" href="https://www.linkedin.com/in/koussay-abroud-148072268/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
         </ul>
       </div>
@@ -180,7 +180,7 @@
               <a href="https://github.com/koussay267" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
               <a href="mailto:abkoussay40@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
               <a href="https://www.linkedin.com/in/koussay-abroud-148072268/" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="https://web.telegram.org/k/" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="https://t.me/koussay40" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
           </div>
       </div>
   </div>
